Archive2/b0/67cb9c4f755874/output
+ g++ -std=c++11 -Wall -Wextra main.cpp
main.cpp: In function ‘int main()’:
main.cpp:13:13: error: invalid conversion from ‘int’ to ‘lol’ [-fpermissive]
     what x(2);
             ^
main.cpp:9:14: error:   initializing argument 1 of ‘what::what(lol)’ [-fpermissive]
     explicit what(lol y): x(y) {}
              ^
