Archive2/b0/67cb9c4f755874/main.cpp
#include <iostream>

enum lol {
    one, two 
};

struct what {
    lol x;
    explicit what(lol y): x(y) {}
};

int main() {
    what x(2);
}